# ralph-swarm

./: .gitignore  CLAUDE.md  README.md  build.sh  pyproject.toml
src/ralph_swarm/: __init__.py  cli.py
src/ralph_swarm/commands/: __init__.py  build.py  cleanup.py  init.py  plan.py  research.py  specify.py  status.py
src/ralph_swarm/prompts/: __init__.py  build.md  specify_full.md  specify_incremental.md  specify_initial.md
src/ralph_swarm/prompts/agents/: adr.md  are-we-done.md  code-reviewer.md
src/ralph_swarm/prompts/system/: build.md  plan.md  research.md  specify_full.md  specify_incremental.md  specify_initial.md
tests/: __init__.py  test_build.py  test_cli.py  test_init.py  test_prompts.py  test_specify.py  test_status.py
