[project]
name = "ralph-swarm"
version = "0.1.0"
description = "AI-powered autonomous development swarm orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "wnorman" }]
keywords = ["ai", "development", "automation", "claude", "swarm"]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
ralph = "ralph_swarm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph_swarm"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/ralph_swarm/**/*.py",
    "src/ralph_swarm/**/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
